Changes since version 3.0.0
---------------------------

- Fixed a bug in endpoint comparisons that would cause new
  connections to be created needlessly.  This would occur when 
  the representation of the host differed between the proxy and 
  endpoint configuration, with one containing the hostname and 
  the other the numeric host address.

- Fixed a bug in the marshaling code that caused an exception
  if a null reference for a Slice class was passed as a parameter.

- Fixed a bug in the Slice parser that caused problems if an
  included file contained white space in the file name.

- Fixed a bug in slice2cs that prevented the generated code
  from being marked as CLS-compliant if the --checksum option
  was used.

Changes since version 2.1.2
---------------------------

- Fixed a deadlock during shutdown that could happen with
  bi-directional connections.

- Changed the mapping for Slice structures: if a Slice structure
  (recursively) contains a member that is of reference type, the Slice
  structure automatically maps to a C# class.

  A Slice structure now maps to a C# structure only if the Slice
  structure (recursively) consists only of value type (and if the
  "clr:class" metadata directive does not apply to the structure).

- Removed ice_default() method from proxies.

- Added an implementation of IceBox for C#.

- Fixed bug in Ice.Application that could cause appName() to return
  the empty string in some cases.

- The run time was obscuring the true origin (source file and
  line number) of some exceptions when rethrowing them. It
  now correctly shows the source of such exceptions
  in the stack trace.

- Connection::close(false) (i.e., graceful connection shutdown) now
  waits until all outstanding requests have completed.

- Added a new object adapter property, <adapter>.ReplicaGroupId, which
  allows adapters to be replicated. See the IceGrid chapter in the
  manual for more information.
